--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/abuzar308/Submission-Bookshelf-API#readme",
   "dependencies": {
     "@hapi/hapi": "^21.3.2",
+    "joi": "^17.9.2",
     "moment": "^2.29.4",
     "nanoid": "^3.3.6"
   },
